--- a/styles/_decision-box.scss
+++ b/styles/_decision-box.scss
@@ -39,6 +39,6 @@
 }
 
 #decision-box .wrapper .container .choices .decision-button:hover {
-    background-color: $sunfall_transparent_black_bg;
+    background-color: $sunfall_purple1_hex;
     cursor: $cursor-default;
 }
